# mr-octopus

./: .gitmodules  CMakeLists.txt
assets/: CMakeLists.txt
assets/img/: octopus-head.aseprite  octopus.aseprite
assets/palettes/: ty-disaster-girl-16-1x.txt
src/: .clang-tidy  CMakeLists.txt
src/assets/: CMakeLists.txt  assets.hpp
src/build-info/: CMakeLists.txt  build-info.cpp.in
src/build-info/include/: build-info.hpp
src/octopus-lab/: CMakeLists.txt  error.hpp  main.cpp  sdl.hpp  view.cpp  view.hpp  world.cpp  world.hpp
src/pack-assets/: CMakeLists.txt  main.cpp
